# ComfyPilot

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: MANUAL.md
docs/extra/: 01-code-errors-fixes-and-improvements.md  02-honest-opinion-what-makes-sense-and-what-not.md  03-ecosystem-benchmark-and-latest-research.md  04-roadmap-to-the-best-version-of-comfypilot.md  2026-03-14-model-awareness-rollout-plan.md  2026-03-14-model-awareness-spec.md  README.md  final-audit-fixes-2026-03-14.md
mcp/: manifest.json
mcp/profiles/: claude-desktop.json  desktop.json  generic.json
scripts/: gen_tool_docs.py
tests/: conftest.py  test_auth_profiles.py  test_builder.py  test_builder_template_fallthrough.py  test_bundle_metadata.py  test_capability_probe.py  test_comfy_client.py  test_compat_engine.py  test_compat_environment.py  test_compat_schema.py  test_compat_structural.py  test_doc_drift.py  test_docs_fetcher.py  test_docs_index.py  test_docs_store.py  test_ecosystem_registry.py  test_errors.py  test_event_drain.py  test_event_lifecycle.py  test_event_manager.py  test_final_review_fixes.py  test_history.py  test_images.py  test_install_graph.py  test_integration_smoke.py  test_job_lifecycle.py  test_job_tracker.py  test_knowledge_config.py  test_knowledge_manager.py  test_knowledge_migration.py  test_knowledge_store.py  test_memory.py  test_model_families.py  test_model_resolver.py  test_models.py  test_monitoring.py  test_nodes.py  test_output_routing.py  test_planner.py  test_registry_client.py  (+21 more)
(+82 files in other folders)
