[project]
name = "comfypilot"
version = "1.0.0"
description = "MCP server for live control of ComfyUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "silviu" }]
keywords = ["mcp", "comfyui", "ai", "stable-diffusion", "image-generation"]

dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
comfypilot = "comfy_mcp.server:main"

[project.urls]
Homepage = "https://github.com/dreamrec/ComfyPilot"
Repository = "https://github.com/dreamrec/ComfyPilot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfy_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
